# dm-ws

./: .gitignore  README.md  agent.py  agent_memory.py  connected_agent.py  context-map.md  hitl_agent.py  mcp_server.py  native_tools_agent.py  order_memory.py  package_label_parser_agent.py  requirements.txt  test_memory.py
package-this/backend/: .env.example  Dockerfile  dm_packages_dev.db  pyproject.toml  requirements.txt
package-this/backend/app/: config.py  database.py  main.py
package-this/backend/app/audit/: logger.py
package-this/backend/app/events/: envelope.py  inmemory.py  publisher.py  service_bus.py
package-this/backend/app/lifecycle/: transitions.py  validator.py
package-this/backend/app/models/: __init__.py  audit_log.py  complaint.py  customer.py  domain_event.py  employee.py  invoice.py  map_location.py  package.py  package_history.py  package_line_item.py  sale.py  truck.py  truck_route.py
package-this/backend/app/persona/: middleware.py  permissions.py
package-this/backend/app/realtime/: broadcaster.py  pubsub.py  websocket.py
package-this/backend/app/routers/: complaints.py  customers.py  demo.py  employees.py  events.py  invoices.py  (+6 more)
package-this/backend/migrations/: env.py
package-this/backend/seed/: seed_data.py
package-this/backend/tests/: conftest.py  test_api_packages.py  test_audit.py  test_event_coverage.py  test_event_envelope.py  test_event_stream_api.py  test_events.py  test_lifecycle.py  test_manager_actions.py  test_map_endpoints.py  test_permissions.py  test_seed.py  test_truck_assignment.py  test_truck_simulation.py
(+168 files in other folders)
